--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 SHRUTI NANWANI
             </div>
             <div class="img">
-                <img class="img" src="/static/img/profile.jpg.jpeg" alt="Profile">
+                <img class="img" src="\static\img\profile2.jpg" alt="Profile">
             </div>
             <div class="text">
 
